<resources>
    <string name="app_name">MyStackExchangeUsers</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="users_fragment_label">Stack Exchange Users</string>
    <string name="user_details_fragment_label">User Details Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="users_search_hint">Enter Search</string>
    <string name="button_clear_search">Clear Search</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="badge_gold">Gold</string>
    <string name="badge_silver">Silver</string>
    <string name="badge_bronze">Bronze</string>
    <string name="layout_about">About</string>
    <string name="layout_username">Username</string>
    <string name="layout_reputation">Reputation</string>
    <string name="layout_location">Location</string>
    <string name="layout_creation_date">Creation Date</string>
    <string name="layout_badges">Badges</string>
</resources>