<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/cvProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardElevation="0dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivProfile">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvHeading"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:text="@string/layout_about"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintBottom_toTopOf="@id/tvReputation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="About" />

                <TextView
                    android:id="@+id/tvUserNameTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/layout_username"
                    android:paddingVertical="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tvReputation"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvHeading"
                    tools:text="Username" />

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintBottom_toTopOf="@id/tvReputation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/tvHeading"
                    tools:text="User Name" />

                <TextView
                    android:id="@+id/tvReputationTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:text="@string/layout_reputation"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tvBadgesTitle"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvUserName"
                    tools:text="Reputation" />

                <TextView
                    android:id="@+id/tvReputation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintBottom_toTopOf="@id/tvBadgesTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/tvUserName"
                    tools:text="123434" />

                <TextView
                    android:id="@+id/tvBadgesTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:text="@string/layout_badges"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tvBadgesGoldTitle"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvReputation"
                    tools:text="Reputation" />

                <TextView
                    android:id="@+id/tvBadgesGoldTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:text="@string/badge_gold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tvLocation"
                    app:layout_constraintEnd_toStartOf="@id/tvBadgesGold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvBadgesTitle" />

                <TextView
                    android:id="@+id/tvBadgesGold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:gravity="center_horizontal"
                    app:layout_constraintBottom_toTopOf="@id/tvLocation"
                    app:layout_constraintEnd_toStartOf="@id/tvBadgesSilverTitle"
                    app:layout_constraintStart_toEndOf="@id/tvBadgesGoldTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvBadgesTitle"
                    tools:text="2" />

                <TextView
                    android:id="@+id/tvBadgesSilverTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:text="@string/badge_silver"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tvLocation"
                    app:layout_constraintEnd_toStartOf="@id/tvBadgesSilver"
                    app:layout_constraintStart_toEndOf="@id/tvBadgesGold"
                    app:layout_constraintTop_toBottomOf="@id/tvBadgesTitle" />

                <TextView
                    android:id="@+id/tvBadgesSilver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:gravity="center_horizontal"
                    app:layout_constraintBottom_toTopOf="@id/tvLocation"
                    app:layout_constraintEnd_toStartOf="@id/tvBadgesBronzeTitle"
                    app:layout_constraintStart_toEndOf="@id/tvBadgesSilverTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvBadgesTitle"
                    tools:text="2" />

                <TextView
                    android:id="@+id/tvBadgesBronzeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:text="@string/badge_bronze"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tvLocation"
                    app:layout_constraintEnd_toStartOf="@id/tvBadgesBronze"
                    app:layout_constraintStart_toEndOf="@id/tvBadgesSilver"
                    app:layout_constraintTop_toBottomOf="@id/tvBadgesTitle" />

                <TextView
                    android:id="@+id/tvBadgesBronze"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:gravity="center_horizontal"
                    app:layout_constraintBottom_toTopOf="@id/tvLocation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvBadgesBronzeTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvBadgesTitle"
                    tools:text="3" />

                <TextView
                    android:id="@+id/tvLocationTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:text="@string/layout_location"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tvCreationDate"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvBadgesGold"
                    tools:text="Location" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintBottom_toTopOf="@id/tvCreationDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/tvBadgesGold"
                    tools:text="New York, United States" />

                <TextView
                    android:id="@+id/tvCreationDateTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:text="@string/layout_creation_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLocation"
                    tools:text="Creation Date" />

                <TextView
                    android:id="@+id/tvCreationDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/tvLocation"
                    tools:text="1326311637" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.45" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>